# sign-and-publish-examples

./: AGENTS.md  README.md
.circleci/: config.yml  npm-publish.yml  pypi-publish.yml
.github/workflows/: publish-jsr.yml
blob/: generate-verification-info.sh  validate-claims.sh
cosign/: README.md  validate-verification-info.sh
cosign/blob/: generate-verification-info.sh  sign.sh  verify.sh
cosign/image/: generate-verification-info.sh  sign.sh  verify.sh
image/: generate-verification-info.sh
jsr/: README.md  jsr.json  mod.ts  package.json  tsconfig.json
jsr/src/: index.ts
npm/: build.sh  index.js  index.test.js  package-lock.json  package.json  publish.sh  readme.md  testify.sh
pypi/: README.md  build.sh  publish.sh  pyproject.toml  testify.sh
pypi/src/circleci_sign_publish_example/: __init__.py
pypi/src/sign_publish_pypi_example/: __init__.py
